@@ -1,3 +1,9 @@
+Sat Nov  8 10:31:26 UTC 2014  Martin Corino  <mcorino@remedy.nl>
+
+        * tao/Remote_Invocation.h:
+        * tao/Remote_Invocation.inl:
+          Updated to fix Windows compile problems.
+
 Fri Nov  7 10:01:43 UTC 2014  Martin Corino  <mcorino@remedy.nl>
 
         * tao/DynamicInterface/DII_Invocation.h:
